<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

        <TextView android:id="@+id/text_remove_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/text_detail_heading"/>

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <View android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#000000"/>

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <EditText android:id="@+id/eDetail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:hint="@string/detailTV" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="displayEmployeeDetails"
            android:text="@string/detailButton" />

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <View android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#000000"/>

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView android:id="@+id/display_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/displayDetails"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
