<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

        <TextView android:id="@+id/text_add_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/URL_add"/>

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <View android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#000000"/>

        <Space android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText android:id="@+id/enter_link"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/editURL" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="loadWeb"
            android:text="@string/buttonURL"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
